@@ -6,6 +6,16 @@ Pending changes in the mainline
 * New configuration options:
   - "DicomThreadsCount" to set the number of threads in the embedded DICOM server
 
+REST API
+--------
+
+* API version upgraded to 16
+* If an image can not be decoced, ../preview and ../rendered routes are now returning 
+  unsupported.png only if the ?returnUnsupportedImage option is specified; otherwise, 
+  it raises a 415 error code.
+  
+
+
 Maintenance
 -----------
 
